--- a/.github/workflows/send_digest.yml
+++ b/.github/workflows/send_digest.yml
@@ -3,8 +3,7 @@ name: Daily Digest Scheduler
 on:
   schedule:
     - cron: "0 8 * * *"  # Every day at 08:00 UTC
-  workflow_dispatch:    # Allow manual trigger
-
+  workflow_dispatch:
 
 jobs:
   send-digest:
@@ -16,6 +15,6 @@ jobs:
         with:
           version: latest
 
-      - run: supabase functions invoke send-digest --no-verify-jwt
+      - run: supabase functions invoke send-digest
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
