--- a/.github/workflows/send_digest.yml
+++ b/.github/workflows/send_digest.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           version: latest
 
-      - run: supabase functions invoke send-digest
+      - run: supabase functions deploy send-digest --no-verify-jwt
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
